crm_contacts migration

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,7 +4,7 @@
   <head>
     <title>QRE: Dynamic</title>
     <link href="/rss/" rel="alternate" title="RSS" type="application/rss+xml" />
-    <link rel="stylesheet" type="text/css" href="<%= radiant_page '/styles.css' %>" />
+    <link rel="stylesheet" type="text/css" href='/styles.css'/>
   </head>
 
 <body>
@@ -16,10 +16,10 @@
 </div>
 <div id="navigation">
   <ul>
-    <li><a href='<%= radiant_page "/" %>'>Home</a></li>
-    <li><a href='<%= radiant_page "/reports" %>'>Reports</a></li>
+    <li><a href='/'>Home</a></li>
+    <li><a href='/reports'>Reports</a></li>
     <li><a href="/subscribe">Subscribe</a></li>
-    <li><a href='<%= radiant_page "/contact" %>'>Contact Us</a></li>
+    <li><a href='/contact'>Contact Us</a></li>
   </ul>
 </div>
 
