--- a/app/views/subscriptions/new.html.erb
+++ b/app/views/subscriptions/new.html.erb
@@ -1,14 +1,7 @@
-Nothing new to see here.
-
-<% form_tag subscription_path do -%>
-  <p><%= label_tag "Email address" %><br />
-  <%= text_field_tag "email", nil, :autocomplete => :off %></p>
+<% form_for :crm_contact, @contact, :url => subscription_path do |f| %>
+  <p><%= label_tag "Email address" %><br /><%=  f.text_field :email, {} %></p>
+  <p><%= label_tag "First name" %><br /><%=  f.text_field :first_name, {} %></p>
+  <p><%= label_tag "Last name" %><br /><%=  f.text_field :last_name, {} %></p>
   
-  <p><%= label_tag "First Name" %><br />
-  <%= text_field_tag "first_name", nil, :autocomplete => :off %></p>
-
-  <p><%= label_tag "Last Name" %><br/>
-  <%= text_field_tag "last_name", nil, :autocomplete => :off %></p>
-
   <p><%= submit_tag "Sign me up!", :id => "subscribe" %></p>
 <% end -%>
