upgrade to rails 3.0.1

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -26,7 +26,8 @@
   <div id="content-container">
     <div id="content">
 
-      <%= @content_for_layout %>
+      <%= yield %>
+      
     </div>
     <div id="aside">
       <p><b>quid.nunc</b>  noun  /&#8217;kwid nengk/</p>
