tooling to bundler

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -41,7 +41,7 @@
 </div>
 </body>
 
-<% if ["production"].include? RAILS_ENV %>
+<% if ["production"].include? Rails.env %>
 <script type="text/javascript">
   var _gaq = _gaq || [];
   _gaq.push(['_setAccount', 'UA-19389114-1']);
