--- a/app/views/subscriptions/new.html.erb
+++ b/app/views/subscriptions/new.html.erb
@@ -1,4 +1,4 @@
-subscriptions#new template --without test
+subscriptions#new template --without test again
 
 <%= form_for @contact, :as => :crm_contact, :url => subscriptions_path do |f| %>
   <p><%= label_tag "Email address" %><br /><%=  f.text_field :email, {} %></p>
