--- a/app/views/subscriptions/new.html.erb
+++ b/app/views/subscriptions/new.html.erb
@@ -1,4 +1,4 @@
-subscriptions#new migration trouble
+<%= error_messages_for :contact, :object => @contact, :header_message => "FAIL BABOON BITE YOU NOW" %>
 
 <%= form_for @contact, :as => :crm_contact, :url => subscriptions_path do |f| %>
   <p><%= label_tag "Email address" %><br /><%=  f.text_field :email, {} %></p>
