--- a/app/views/subscriptions/new.html.erb
+++ b/app/views/subscriptions/new.html.erb
@@ -1,3 +1,5 @@
+<div class='clearfix' id='body_content_left'>  
+
 <%= error_messages_for :contact, :object => @contact, :header_message => "FAIL BABOON BITE YOU NOW" %>
 
 <%= form_for @contact, :as => :crm_contact, :url => subscriptions_path do |f| %>
@@ -7,3 +9,15 @@
   
   <p><%= submit_tag "Sign me up!", :id => "subscribe" %></p>
 <% end -%>
+</div>
+
+<div class='clearfix' id='body_content_right'>  
+ <span style="font-weight:bold;">quid•nunc</span> noun /’kwid nengk/
+
+ <div class="definition" style="padding-top: 20px;">
+   An inquisitive person that seeks the latest news and/or gossip; someone who is always asking 'What now?' or 'What’s new?' 
+ </div>
+ <div class="definition" style="padding-top: 20px;">
+   Recorded from the early 18th century, the word comes from the Latin quid 'what' + nunc 'now'.
+ </div>
+</div>
