--- a/themes/quizmodo/views/shared/_splash_posts.html.erb
+++ b/themes/quizmodo/views/shared/_splash_posts.html.erb
@@ -18,7 +18,7 @@
   <% end -%>
 
   <div class="topStory hide">
-    FAIL BABOON BITE YOU NO HIDE
+    FAIL BABOON BITE YOU NO HIDE1
   </div>
 
 </div>
