--- a/themes/quizmodo/views/shared/_list_page.html.erb
+++ b/themes/quizmodo/views/shared/_list_page.html.erb
@@ -1,115 +1,8 @@
-<div id="inflowNotification" class="post content inflowNotification" style="display:none;">
-  <div>
-    <div class="postpic"><a class="topTag condensedTag">notification</a></div>
-    <div class="noimage_title"><h1 class="dcolor normal notifMsgFake"></h1></div> 
-    <div class="notifMsg"></div>
-    <div style="clear: both"></div>
-    <div class="notifications" style="display: none;">
-      <div class="text"></div>
-      <div class="notif_controls">
-        <div class="more notif_control cn_morenotification" style="cursor: pointer;">
-          <div class="showMore">Show more</div>
-          <div class="downArrow"></div>
-          <div class="moreNotifIndicator" style="display: none;">
-            <img src="/theme/images/progressIndicator_roller.gif" alt="" width="12" height="12">
-          </div>
-          <div style="clear: both;"></div>
-        </div>
-        <div class="seeall"><a class="see_all" href="">See all</a></div>
-        <div class="notif_control cn_clear" style="cursor: pointer;">Clear notifications</div>
-      </div>
-    </div>
-  </div>
-  <div class="inflow_terminating"></div>
-</div>
 
-<div class="postid_5764153 post siteid_4">
-    
-    
-    <div class="content withpic">
-  <div class="postpic">
-    <a title="Click here to read Nikon Considering Cooling Fans Inside Cameras" href="http://QUIDNUNCRE.com/tag/patents/" class="topTag"><span class="hash">#</span>patents</a>
-        <a title="Click here to read Nikon Considering Cooling Fans Inside Cameras" href="http://ca.QUIDNUNCRE.com/5764153/nikon-considering-cooling-fans-inside-cameras" class="pp_image">
-      <img height="120" width="160" title="Click here to read Nikon Considering Cooling Fans Inside Cameras" alt="Click here to read Nikon Considering Cooling Fans Inside Cameras" src="/theme/images/160x120_nikonfan.jpg">
-          </a>
-      </div>
-  <h1>
-    <a title="Click here to read Nikon Considering Cooling Fans Inside Cameras" class="dcolor" href="http://ca.QUIDNUNCRE.com/5764153/nikon-considering-cooling-fans-inside-cameras">Nikon Considering Cooling Fans Inside Cameras</a>
-  </h1>
-  Well, this could certainly be annoying! To combat overheating sensors, Nikon may place a tiny cooling fan inside upcoming mirrorless cameras, according to a recent patent filing. Small fans mean high RPMs, which mean high pitched squealing. Not good. [<a href="http://www.petapixel.com/2011/02/17/nikon-may-use-fan-to-cool-down-its-mirrorless-cameras/">PetaPixel</a>]
-    
-</div>
-      <div class="postmeta smalltype">
-  <div class="postmeta_ad">
-<div class="dfpad" id="gadc_8082028-placeholder">POST META ADVERTISEMENT</div><div class="dfpad" id="gadc_8082028-delayed"><a target="_blank" href="http://ad.doubleclick.net/click;h=v8/3ab2/0/0/%2a/b;44306;0-0;0;38377215;1290-300/40;0/0/0;;~okv=;;ptile=4;sz=300x40;~aopt=2/1/31/0;~sscs=%3f"><img src="/theme/images/817-grey.gif" border="0" alt="Click here to find out more!"></a><!-- \o/ --></div></div>
-  <div class="pm_l pm_date">
-    <a href="http://ca.QUIDNUNCRE.com/5764153/nikon-considering-cooling-fans-inside-cameras" class="pm_link" rel="nofollow" title="on 10:20 AM">10:20 AM</a><img src="/theme/images/clock-filled.png" class="pm_meta_icon" width="15" height="15">
-  </div>
-      <div class="pm_l pm_views" title="0 views on this post">
-    0<img alt="0 views on this post" src="/theme/images/flame-gray.png" title="0 views on this post" class="pm_meta_icon" width="10" height="15">
-  </div>
-      <div class="pm_l pm_comments">
-    <a class="pm_link" href="http://ca.QUIDNUNCRE.com/5764153/nikon-considering-cooling-fans-inside-cameras#viewcomments" rel="nofollow" title="Leave a comment about this post">0</a><img src="/theme/images/comment-empty.png" title="Leave a comment about this post" class="pm_meta_icon" width="15" height="15">
-  </div>
-      <div class="pm_l pm_byline">
-        <cite class="pm_byline">By
-              <a href="http://ca.QUIDNUNCRE.com/people/SamBiddle/posts/" title="Click here to read posts written by Sam Biddle" class="pm_link">Sam Biddle</a>
-          </cite>
-      </div>
-  </div>
-</div>
+<%= render partial: 'shared/feed_element' %>
 
-<div class="postid_5764160 post siteid_4">
-  <div class="content postBigPic">
-    <a title="Click here to read Waldok Is the Only iPhone Dock I Really Want" class="spimage" href="http://ca.gizmodo.com/5764160/waldok-is-the-only-iphone-dock-i-really-want">
-      <img width="500" style="padding: 0pt;" title="" alt="" class="bigpic" src="/theme/images/500x_ss_wall02.jpg">
-    </a>
-    <a title="Click here to read Waldok Is the Only iPhone Dock I Really Want" href="http://gizmodo.com/tag/audio/" class="topTag condensedTag" id="tag_5764160">
-      <span class="hash">#</span>audio    </a>
-    <div class="bigExcerptHolder">
-      <h1>
-        <a title="Click here to read Waldok Is the Only iPhone Dock I Really Want" class="dcolor" href="http://ca.gizmodo.com/5764160/waldok-is-the-only-iphone-dock-i-really-want">Waldok Is the Only iPhone Dock I Really Want</a>
-      </h1>
-      I want the Waldok. I have wanted one forever, ever since I first saw a dock for the old school iPod. Why don't make a cool dock speaker that I can plug onto my bathroom power socket or any other room?      
-              <a href="http://ca.gizmodo.com/5764160/waldok-is-the-only-iphone-dock-i-really-want" title="Click here to read more about Waldok Is the Only iPhone Dock I Really Want">More&nbsp;»</a>
-          </div>
-</div>      <div class="postmeta smalltype">
-  <div class="postmeta_ad">
-<div class="dfpad" id="gadc_8296454-placeholder">
-  
-</div>
-<div class="dfpad" id="gadc_8296454-delayed"><a target="_blank" href="#"><img src="/theme/images/817-grey.gif" border="0" alt="Click here to find out more!"></a><!-- \o/ --></div></div>
-  <div class="pm_l pm_date">
-    <a href="http://ca.gizmodo.com/5764160/waldok-is-the-only-iphone-dock-i-really-want" class="pm_link" rel="nofollow" title="on 10:20 AM">10:20 AM</a><img src="/theme/images/clock-filled.png" class="pm_meta_icon" width="15" height="15">
-  </div>
-      <div class="pm_l pm_views" title="0 views on this post">
-    0<img alt="0 views on this post" src="/theme/images/flame-gray.png" title="0 views on this post" class="pm_meta_icon" width="10" height="15">
-  </div>
-      <div class="pm_l pm_comments">
-    <a class="pm_link" href="http://ca.gizmodo.com/5764160/waldok-is-the-only-iphone-dock-i-really-want#viewcomments" rel="nofollow" title="Leave a comment about this post">0</a><img src="/theme/images/comment-empty.png" title="Leave a comment about this post" class="pm_meta_icon" width="15" height="15">
-  </div>
-      <div class="pm_l pm_byline">
-        <cite class="pm_byline">By
-              <a href="http://ca.gizmodo.com/people/jesusdiaz/posts/" title="Click here to read posts written by Jesus Diaz" class="pm_link">Jesus Diaz</a>
-          </cite>
-      </div>
-  </div>
-</div>
+<%= render partial: 'shared/feed_element_stats' %>
 
-  <div class="pager smalltype">
-        <a href="http://ca.QUIDNUNCRE.com/?p=1" class="current_page">1</a>
-      <a href="http://ca.QUIDNUNCRE.com/?p=2">2</a>
-      <a href="http://ca.QUIDNUNCRE.com/?p=3">3</a>
-      <a href="http://ca.QUIDNUNCRE.com/?p=4">4</a>
-      <a href="http://ca.QUIDNUNCRE.com/?p=5">5</a>
-      <a href="http://ca.QUIDNUNCRE.com/?p=6">6</a>
-      <a href="http://ca.QUIDNUNCRE.com/?p=7">7</a>
-      <a href="http://ca.QUIDNUNCRE.com/?p=8">8</a>
-      <a href="http://ca.QUIDNUNCRE.com/?p=9">9</a>
-      <a href="http://ca.QUIDNUNCRE.com/?p=10">10</a>
-        <a href="http://ca.QUIDNUNCRE.com/?p=2">next »</a>
-    </div>
+<%= render partial: 'shared/feed_element' %>
 
-    <div class="clear">&nbsp;</div>
-  </div>
-</div>
+<%= render partial: 'shared/feed_element_stats' %>
