--- a/themes/quizmodo/views/layouts/application.html.erb
+++ b/themes/quizmodo/views/layouts/application.html.erb
@@ -1,5 +1,5 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<!-- saved from url=(0022)http://ca.QUIDNUNCRE.com/ -->
+<!-- saved from url=(0022)/ -->
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:fb="http://www.facebook.com/2008/fbml" class="webkit safari mac js">
 
 <%= render :partial => "/shared/head", :locals => {:theme => true} %>
@@ -13,32 +13,23 @@
   <div id="infobar" style="display:none;"></div>
   <div id="randombar" style="display:none;"></div>
 
-  <%= render :partial => "/shared/menu" -%>
-
   <%= render :partial => "/shared/header" -%>
 
 <div>
-  
+
 <div id="container" class="centered">
   <div id="sidebar" class="smalltype">
 
-  <%= render partial: "shared/ad2" %>
-  
-  <%= render partial: "shared/site_info" %>
+  <%= render partial: "shared/sidebar" %>
 
-  <%= render partial: "shared/newsletter_signup" %>
-
-  <%= render partial: "shared/rss" %>
-
-  </div><!-- sidebar -->
+  </div>
   <div id="wrapper">
-    
+
     <%= yield %>
-    
+
   </div>
 
   <%= render partial: "shared/footer" %>
-<!-- overlay templates -->
 
 </body>
 </html>
