--- a/themes/quizmodo/views/shared/_feed_element_stats.html.haml
+++ b/themes/quizmodo/views/shared/_feed_element_stats.html.haml
@@ -1,6 +1,4 @@
 .postmeta.smalltype
-  .postmeta_ad
-    AD CONTENT
   .pm_l.pm_date
     %a{href:"#",class:"pm_link",rel:"nofollow", title:"on 10:20 AM"}
       10:20 AM
@@ -10,4 +8,4 @@
     %cite.pm_byline
       By
       %a.pm_link{href:'#', title: 'Click byline'}
-        Jesus Diaz
+        Aaron Franklin
